<resources>
    <string name="app_name">AiLaTrieuPhu</string>
    <string name="k200">200</string>
    <string name="k400">400</string>
    <string name="k600">600</string>
    <string name="k1000">1.000</string>
    <string name="k2000">2.000</string>
    <string name="k3000">3.000</string>
    <string name="k6000">6.000</string>
    <string name="k10000">10.000</string>
    <string name="k14000">140.000</string>
    <string name="k22000">22.000</string>
    <string name="k30000">30.000</string>
    <string name="k40000">40.000</string>
    <string name="k60000">60.000</string>
    <string name="k85000">85.000</string>
    <string name="k150000">150.000</string>

    <string name="cauA">   A:</string>
    <string name="cauB">   B:</string>
    <string name="cauC">   C:</string>
    <string name="cauD">   D:</string>


    <string name="cauhoi1">Theo một câu hát thì: "Ba thương con vì con giống mẹ.Mẹ thương con vì con giống ..." ai?</string>
    <string name="cau1a">Ông hàng xóm</string>
    <string name="cau1b">Chú cạnh nhà</string>
    <string name="cau1c">Ba</string>
    <string name="cau1d">Bác đầu ngõ</string>


    <string name="choilai">Chơi lại</string>
    <string name="thoat">Thoát</string>


</resources>