<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/nenaltp"
    android:weightSum="11"

    tools:context=".MainActivity">



    //tien thuong
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:weightSum="15"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lncau15"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv15"
                style="@style/tienthuongStyle"
                android:text="@string/k150000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau14"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv14"
                style="@style/tienthuongStyle"
                android:text="@string/k85000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau13"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv13"
                style="@style/tienthuongStyle"
                android:text="@string/k60000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau12"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv12"
                style="@style/tienthuongStyle"
                android:text="@string/k40000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv11"
                style="@style/tienthuongStyle"
                android:text="@string/k30000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv10"
                style="@style/tienthuongStyle"
                android:text="@string/k22000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv9"
                style="@style/tienthuongStyle"
                android:text="@string/k14000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv8"
                style="@style/tienthuongStyle"
                android:text="@string/k10000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv7"
                style="@style/tienthuongStyle"
                android:text="@string/k6000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv6"
                style="@style/tienthuongStyle"
                android:text="@string/k3000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv5"
                style="@style/tienthuongStyle"
                android:text="@string/k2000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv4"
                style="@style/tienthuongStyle"
                android:text="@string/k1000">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv3"
                style="@style/tienthuongStyle"
                android:text="@string/k600">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv2"
                style="@style/tienthuongStyle"
                android:text="@string/k400">

            </TextView>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/lncau1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/testlayout"

            android:layout_weight="1">
            <TextView
                android:id="@+id/tv1"
                style="@style/tienthuongStyle"
                android:text="@string/k200">

            </TextView>


        </LinearLayout>









    </LinearLayout>

    //cau hoi , cau tl
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:weightSum="8"
        android:orientation="vertical">

        //logo

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="2">

            <ImageView
               android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ailatrieuphu"></ImageView>

        </LinearLayout>

        //cau hoi, dong ho dem nguoc

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:weightSum="15">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></LinearLayout>


            //cau hoi

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/textviewlayout"
                android:layout_weight="12">
                <TextView
                    android:id="@+id/tvCauhoi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="@color/white"></TextView>


            </LinearLayout>


            //dong ho dem nguoc
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/dongHoDemNguoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="30"></TextView>

            </LinearLayout>



        </LinearLayout>

        //cau tl a b

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:weightSum="15">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></LinearLayout>
        //cau tl a
            <LinearLayout
                android:id="@+id/cautlA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/textviewlayout"
                android:layout_weight="6">

                <TextView
                    android:id="@+id/cauA"
                    android:hint="A"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:rotationX="0"

                    android:textColor="@color/cautl"
                    android:textSize="15sp"></TextView>

            </LinearLayout>
        //cau tl b
            <LinearLayout
                android:id="@+id/cautlB"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/textviewlayout"
                android:layout_weight="6">
                <TextView
                    android:id="@+id/cauB"
                    android:hint="B"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:textSize="15sp"
                    android:textColor="@color/cautl"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">


            </LinearLayout>



        </LinearLayout>

        //cau tl c d

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="15">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"></LinearLayout>

            //cau tl c

            <LinearLayout
                android:id="@+id/cautlC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/textviewlayout"
                android:layout_weight="6">
                <TextView
                    android:id="@+id/cauC"
                    android:hint="C"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"

                    android:textColor="@color/cautl"></TextView>

            </LinearLayout>


            //cau tl d
            <LinearLayout
                android:id="@+id/cautlD"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/textviewlayout"
                android:gravity="center"
                android:layout_weight="6">
                <TextView

                    android:id="@+id/cauD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="D"

                    android:textSize="15sp"
                    android:textColor="@color/cautl"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>






    </LinearLayout>

    //su tro giup

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="vertical">

        //50/50
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:padding="10px">

            <Button
                android:id="@+id/trogiupnamnam"
                android:background="@mipmap/namnam_uncheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </Button>


        </LinearLayout>

        //goi dien thoai cho nguoi than
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10px">
            <Button
                android:id="@+id/trogiupgoidienthoai"
                android:background="@mipmap/phone_nochecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        //hoi y kien khan gia trong truong quay

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10px">
            <Button
                android:id="@+id/trogiuphoiykien"
                android:background="@mipmap/hoiykien_ischecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        //tu van tai cho

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10px">
            <Button
                android:id="@+id/trogiuptuvantaicho"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>









    </LinearLayout>





</LinearLayout>